--- a/Bio.html
+++ b/Bio.html
@@ -48,7 +48,7 @@
             </td><br>
             
             <td>User Id: vacantvalley</td><br>
-            <td>Bio: "http://bookmooch.com/kittycat"</td><br>
+            <td>Bio: "http://bookshare.com/kittycat"</td><br>
         </tr><br>
         <tr>
             <td><a href="./Inventory.html"> Inventory : 0 </a></td><br>
